Revert "Fix parchment overflow on smaller desktop screens"
This reverts commit 8ab077a10efbfa3371ed73debc467e154df718cb.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -390,9 +390,9 @@ body *::after {
   position: relative;
   z-index: 1;
   width: 100%;
-  max-width: min(1100px, 100%);
+  max-width: 1100px;
   min-width: 0;
-  flex-shrink: 1;
+  flex-shrink: 0;
   box-sizing: border-box;
   margin: 0 auto;
 }
